[project]
name = "beacon-tv-downloader"
version = "0.1.0"
description = "Beacon TV Downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "yt-dlp>=2025.11.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
beacon-dl = "beacon_dl.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/beacon_dl --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beacon_dl"]
