[project]
name = "beacon-tv-downloader"
version = "0.2.0"
description = "Beacon TV Downloader - Direct HTTP downloads, no yt-dlp required"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
]

[project.scripts]
beacon-dl = "beacon_dl.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage and reporting
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src/beacon_dl",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=60",  # Enforce 60% minimum coverage (adjusted after httpx migration)
]

# Test markers for organization
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, end-to-end)",
    "security: Security-related tests",
    "slow: Slow tests (network calls, etc.)",
]

# Timeout configuration
timeout = 300  # 5 minutes max per test

# Coverage configuration
[tool.coverage.run]
source = ["src/beacon_dl"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beacon_dl"]
